--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=crud
 server.port=8000
+server.address=0.0.0.0
 spring.datasource.url=jdbc:mysql://193.203.175.97:3306/u255994622_proyectotechpr
 spring.datasource.username=u255994622_pilar
 spring.datasource.password=Maxi1717@
