Agregado de endpoints de consultas y agregado de sistema de login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,17 @@ spring.jpa.hibernate.ddl-auto = update
 java.runtime.version=21
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.node.mode=always
+
+token.signing.key = abcdefghijklmnopqrstuvwxyz123456
+
+
+spring.datasource.hikari.max-lifetime=300000
+spring.datasource.hikari.idle-timeout=300000 
+spring.datasource.hikari.connection-timeout=30000  
+spring.datasource.hikari.minimum-idle=5  
+spring.datasource.hikari.maximum-pool-size=10  
+
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
+
+spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.transaction.jta.platform.internal.NoJtaPlatform
