--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.hibernate.ddl-auto = update
 java.runtime.version=21
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.node.mode=always
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 token.signing.key = abcdefghijklmnopqrstuvwxyz123456
 
